Accessibility contrast fixes.

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -14,7 +14,7 @@ $lt-gray: rgba(235, 235, 235, 1);
 $drk-gray: rgba(128, 128, 128, 1);
 $white: rgba(255, 255, 255, 1);
 $lt-blue: rgba(138, 213, 231, 1);
-$drk-blue: rgba(61, 157, 179, 1);
+$drk-blue: rgba(40, 95, 108, 1);
 
 $border: 1px solid $drk-gray;
 
@@ -40,8 +40,8 @@ header { margin: 0 auto 5%;
 }
 footer { margin: 0 auto; font-size: .8em; max-width: 426px; text-align: center; line-height: 1.5;
   @include mobile { font-size: .6em; }
-  a { color: $drk-blue; text-decoration: none; pointer: cursor; font-weight: bold;
-    &:hover { color: $lt-blue; }
+  a { color: $drk-blue; text-decoration: none; pointer: cursor;
+    &:hover { color: $drk-gray; }
   }
 }
 
